# --------------------( LICENSE                            )--------------------
# Copyright 2014-2017 by Alexis Pietak & Cecil Curry.
# See "LICENSE" for further details.
#
# --------------------( SYNOPSIS                           )--------------------
# Project-wide pip and setuptools configuration, containing miscellaneous
# project metadata *NOT* already provided by a more appropriate top-level file
# (typically either "setup.py" or "MANIFEST.in").
#
# Welcome to setuptools hell, where only twenty distinct files in twenty
# distinct formats suffice to distribute a single project.

# ....................{ WHEEL                              }....................
# Metadata specific to the third-party "wheel" package used to produce
# platform-specific binary distributions of this project.

[metadata]

# Relative path of the file providing this project's license.
license_file = LICENSE
